[package]
name = "html_tags"
version = "0.1.0"
authors = ["petar-dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "Enumarate all html tags"
keywords = ["html", "tags"]
repository = "https://github.com/petar-dambovaliev/html_tags"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
